--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node ./server/bin/www",
+    "start": "ng build && node ./server/bin/www",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
