--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node ./server/bin/www && ng build",
+    "start": "nodemon ./server/bin/www && ng build",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.5.4",
     "debug": "~2.6.9",
@@ -34,7 +35,9 @@
     "mongoose": "^5.2.4",
     "morgan": "~1.9.0",
     "ngx-toastr": "^8.8.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.2",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "twig": "~0.10.3",
     "zone.js": "^0.8.26"
   },
