--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
