--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.2.13",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.2.14",
+    "morgan": "^1.9.1",
     "ngx-toastr": "^8.10.2",
     "rxjs": "^6.3.1",
     "socket.io": "^2.1.1",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "~6.2.1",
     "@angular/compiler-cli": "^6.1.7",
     "@angular/language-service": "^6.1.7",
     "@types/jasmine": "~2.8.6",
