--- a/package.json
+++ b/package.json
@@ -11,57 +11,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.9",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.9",
-    "@angular/compiler": "^6.1.9",
-    "@angular/core": "^6.1.9",
-    "@angular/forms": "^6.1.9",
-    "@angular/http": "^6.1.9",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.9",
-    "@angular/platform-browser-dynamic": "^6.1.9",
-    "@angular/router": "^6.1.9",
+    "@angular/animations": "^7.2.2",
+    "@angular/cdk": "^7.2.2",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
+    "@angular/material": "^7.2.2",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
-    "chart.js": "^2.7.2",
+    "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
     "cookie-parser": "~1.4.3",
-    "core-js": "^2.5.4",
-    "cors": "^2.8.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jsonwebtoken": "^8.3.0",
-    "moment": "^2.22.2",
-    "mongoose": "^5.2.17",
+    "core-js": "^2.6.3",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "express": "~4.16.4",
+    "http-errors": "~1.7.1",
+    "jsonwebtoken": "^8.4.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
-    "ngx-toastr": "^8.10.2",
+    "ngx-toastr": "^9.1.1",
     "rxjs": "^6.3.3",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "twig": "~0.10.3",
-    "zone.js": "^0.8.26"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "tslib": "^1.9.0",
+    "twig": "~1.12.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.3",
-    "@angular/cli": "~6.2.3",
-    "@angular/compiler-cli": "^6.1.9",
-    "@angular/language-service": "^6.1.9",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/build-angular": "^0.12.2",
+    "@angular/cli": "^7.2.2",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/language-service": "^7.2.2",
+    "@types/jasmine": "^3.3.7",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^10.12.18",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
   }
 }
