--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng6-school",
+  "name": "ng8-school",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,58 +11,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.2",
-    "@angular/cdk": "^7.2.2",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/material": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.2.1",
-    "chart.js": "^2.7.3",
-    "cookie-parser": "~1.4.3",
-    "core-js": "^2.6.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^3.1.3",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
-    "express": "~4.16.4",
-    "http-errors": "~1.7.1",
-    "jsonwebtoken": "^8.4.0",
+    "express": "~4.17.1",
+    "http-errors": "^1.7.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.6",
+    "mongoose": "^5.5.11",
     "morgan": "^1.9.1",
-    "ngx-toastr": "^9.1.1",
-    "rxjs": "^6.3.3",
+    "ngx-toastr": "^10.0.4",
+    "rxjs": "^6.5.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
-    "twig": "~1.12.0",
-    "zone.js": "^0.8.29"
+    "twig": "~1.13.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.2",
-    "@angular/cli": "^7.2.2",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/language-service": "^7.2.2",
-    "@types/jasmine": "^3.3.7",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^10.12.18",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~3.3.0",
+    "@types/node": "^12.0.3",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "ts-node": "~8.2.0",
+    "tslint": "~5.16.0",
+    "typescript": "~3.4.5"
   }
 }
