--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-next.3",
-    "@angular/cdk": "^8.1.2",
-    "@angular/common": "^9.0.0-next.3",
-    "@angular/compiler": "^9.0.0-next.3",
-    "@angular/core": "^9.0.0-next.3",
-    "@angular/forms": "^9.0.0-next.3",
-    "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "^9.0.0-next.3",
-    "@angular/platform-browser-dynamic": "^9.0.0-next.3",
-    "@angular/router": "^9.0.0-next.3",
+    "@angular/animations": "~8.2.3",
+    "@angular/cdk": "^8.1.3",
+    "@angular/common": "~8.2.3",
+    "@angular/compiler": "~8.2.3",
+    "@angular/core": "~8.2.3",
+    "@angular/forms": "~8.2.3",
+    "@angular/material": "^8.1.3",
+    "@angular/platform-browser": "~8.2.3",
+    "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/router": "~8.2.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -49,8 +49,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.0",
     "@angular/cli": "^8.3.0",
-    "@angular/compiler-cli": "^9.0.0-next.3",
-    "@angular/language-service": "^9.0.0-next.3",
+    "@angular/compiler-cli": "~8.2.3",
+    "@angular/language-service": "~8.2.3",
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~8.9.4",
